Commit pós atualização

--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
         <div class="banner-principal">
             <!-- <img src="./banner-background.png" alt=""> -->
 
-            <div class="text-content max-container">
+            <div class="text-content">
                 <!-- <img src="./banner-text.png" alt=""> -->
                 <h1>
                     10 years creating the best in mobile entertainment.
@@ -150,7 +150,7 @@
                 <p class="text">Jam City’s global franchise<strong> Cookie Jam</strong> has generated
                     more than <strong>half a billion dollars</strong> , and <strong>Panda Pop</strong> has
                     more than <strong>120 million downloads</strong> to date.</p>
-                <a class="btn btn--effect btn--hover-text" href="">
+                <a class="btn btn-normal btn--effect btn--hover-text" href="">
                     Learn More
                     <span data-uw-styling-context="true">Let's Go</span>
                 </a>
@@ -189,30 +189,34 @@
                     <p><a href="#">See Details > </a></p>
                 </div>
             </div>
-            <a class="btn btn--effect btn--hover-text" href="">
+            <a class="btn btn--effect btn--hover-text btn-menor" href="">
                 Browse More Games
                 <span data-uw-styling-context="true">Let's Go</span>
             </a>
 
         </div>
 
-        <section class="dream-team">
+        <section class="dream-team max-container">
             <div class="team max-container">
                 <div class="team-text">
                     <h2>Meet the Dream Team</h2>
-                    <span>Led by CEO Chris DeWolfe, former MySpace co-founder and CEO, and COO Josh
-                        Yguado, former 20th Century Fox executive, Jam City is the creative powerhouse
+                    <span>Led by <strong>CEO Chris DeWolfe</strong>, former MySpace co-founder and CEO, and <strong>COO Josh
+                        Yguado</strong> , former 20th Century Fox executive, Jam City is the creative powerhouse
                         behind some of the highest-grossing and most enduring mobile games.</span>
                 </div>
 
             </div>
-            <div class="team-images">
-                <img src="./images/Grupo 12.png" alt="">
-                <img src="./images/Grupo 34.png" alt="">
-                <img src="./images/Grupo 11.png" alt="">
-                <img src="./images/banner-background.png" alt="">
+            <div class="team-images-one max-container">
+                <img style="width: 520px;" src="./images/Grupo 12.png" alt="">  
             </div>
-            <a class="btn btn--effect btn--hover-text button-final" style="z-index: 99; top: 230px;" href="">
+            <div class="team-images-two max-container">
+                <img style="width: 400px;" src="./images/Grupo 11.png" alt="">  
+            </div>
+            <div class="team-images-three max-container">
+                <img style="width: 770px;" src="./images/Grupo 34.png" alt="">  
+            </div>
+
+            <a class="btn btn--effect btn--hover-text btn-normal button-final" style="z-index: 99; top: 230px;" href="">
                 Learn More
                 <span data-uw-styling-context="true">Let's Go</span>
             </a>
@@ -254,7 +258,7 @@
                         <img src="./images/logo-inferior.svg" alt="">
                     </div>
                 </div>
-                <div class="infos-right">
+                <div style="position: relative;" class="infos-right">
                     <ul>
                         <li><a href="">Who We Are</a></li>
                         <li><a href="">Games</a></li>
@@ -267,8 +271,9 @@
                         <li><a href="">Terms Of Service</a></li>
                         <li><a href="">Press</a></li>
                     </ul>
-
+                    <span>© 2020 Jam City, Inc. JAM CITY® and the JAM CITY Logo are registered <!-- <br> --> and/or unregistered trademarks of Jam City, Inc.</span>
                 </div>
+                
             </div>
 
 
